--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Login</title>
     <link rel="shortcut icon" href="img/gerente.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     
@@ -23,12 +24,12 @@
     
 <strong><label for="password" class="otro">Password</label></strong>
 <div class="password-box">
-  <input type="password" id="password" placeholder="Contraseña" autocomplete="new-password"><br><br>
+  <input type="callate" id="password" placeholder="Contraseña" autocomplete="new-password"><br><br>
 
   <label for="showPass" class="eye">👁️</label>
-
+  </div>
   
-</div>
+
 
 
 <a href="#" class="myButton">Iniciar Sesion</a>
